# todo-fast

./: .gitignore  README.md  db.py  helpers.py  main.py  models.py  pyproject.toml  run.sh  ui.py
todo-fast/: bruno.json  change password.bru  collection.bru  create todo.bru  create user.bru  delete account.bru  delete todo.bru  get all todos.bru  get one todo.bru  index.bru  login.bru  modify todo.bru
